--- a/src/components/InteractionEntry/InteractionEntry.css
+++ b/src/components/InteractionEntry/InteractionEntry.css
@@ -1,3 +1,14 @@
 .interaction-entry {
+    border-radius: 2px;
     background-color: #fff;
+    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+    padding: 10px 0 10px 0;
+}
+
+.interaction-entry-title,
+.interaction-entry-subtitle,
+.interaction-entry-evaluation,
+.interaction-entry-notes
+{
+    margin-left: 20px;
 }
