--- a/src/components/InteractionEntryCard/InteractionEntryCard.css
+++ b/src/components/InteractionEntryCard/InteractionEntryCard.css
@@ -1,5 +1,5 @@
 .interaction-entry-card {
-    border-radius: 2px;
+    border-radius: 3px;
     background-color: #fff;
     box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
     padding: 10px 0 10px 0;
@@ -11,4 +11,17 @@
 .interaction-entry-card-notes
 {
     margin-left: 20px;
+}
+
+.interaction-entry-card-title {
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.interaction-entry-card-subtitle {
+    font-size: 12px;
+    font-weight: lighter;
+    color: #ad1919;
+    margin-bottom: 10px;
+
 }
